--- a/quiz-examination-system/TeacherDashboardPage.xaml
+++ b/quiz-examination-system/TeacherDashboardPage.xaml
@@ -12,27 +12,56 @@
     <NavigationView x:Name="TeacherNav" 
                    IsBackButtonVisible="Collapsed" 
                    IsSettingsVisible="False" 
-                   PaneDisplayMode="Top"
+                   PaneDisplayMode="Left"
                    SelectionChanged="TeacherNav_SelectionChanged">
         
         <NavigationView.MenuItems>
+            <NavigationViewItem Content="Dashboard" Tag="dashboard">
+                <NavigationViewItem.Icon>
+                    <FontIcon Glyph="&#xE80F;"/>
+                </NavigationViewItem.Icon>
+            </NavigationViewItem>
+            
             <NavigationViewItem Content="Question bank" Tag="QuestionBank">
                 <NavigationViewItem.Icon>
                     <FontIcon Glyph="&#xE8E6;"/>
                 </NavigationViewItem.Icon>
             </NavigationViewItem>
+            
             <NavigationViewItem Content="Manage quizzes" Tag="ManageQuizzes">
                 <NavigationViewItem.Icon>
                     <FontIcon Glyph="&#xE8C8;"/>
                 </NavigationViewItem.Icon>
             </NavigationViewItem>
+            
             <NavigationViewItem Content="Review attempts" Tag="ReviewAttempts">
                 <NavigationViewItem.Icon>
                     <FontIcon Glyph="&#xE81E;"/>
                 </NavigationViewItem.Icon>
             </NavigationViewItem>
+            
+            <NavigationViewItem Content="Reports" Tag="Reports">
+                <NavigationViewItem.Icon>
+                    <FontIcon Glyph="&#xE9F9;"/>
+                </NavigationViewItem.Icon>
+            </NavigationViewItem>
         </NavigationView.MenuItems>
 
-        <Frame x:Name="ContentFrame" Padding="24"/>
+        <Grid>
+            <Frame x:Name="ContentFrame" Padding="24"/>
+            
+            <InfoBar x:Name="ActionMessage" 
+                     IsOpen="False" 
+                     Severity="Informational" 
+                     IsClosable="True"
+                     VerticalAlignment="Bottom"
+                     HorizontalAlignment="Right"
+                     MaxWidth="400"
+                     Margin="24">
+                <InfoBar.Shadow>
+                    <ThemeShadow />
+                </InfoBar.Shadow>
+            </InfoBar>
+        </Grid>
     </NavigationView>
 </Page>
